[package]
name = "ghk"
version = "1.0.2"
edition = "2021"
description = "Simple GitHub helper - push code without the complexity"
authors = ["ghk contributors"]
license = "MIT"
readme = "README.md"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dialoguer = "0.11"
anyhow = "1.0"
which = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
toml = "0.8"
thiserror = "1.0"
libc = "0.2"
indicatif = "0.17"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
